fix(film-list): fix card layout and navbar disappearing
The navbar disappeared after scrolling past 100% of the window's height.
Fix the layout that was uneven and made an horizontal scroll bar. Remove
unnecessary code for masonry because I couldn't make it work properly.

--- a/film-list/src/styles/globals.css
+++ b/film-list/src/styles/globals.css
@@ -1,6 +1,5 @@
 html,
-body,
-#__next {
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -9,7 +8,7 @@ body,
 #__next {
   display: flex;
   flex-flow: column;
-  height: 100%;
+  min-height: 100%;
 }
 
 #navbar {
@@ -18,5 +17,7 @@ body,
 
 #main {
   flex: 1 1 auto;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
